added project updated up to proj-lab-1